grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    print_statement: ($) =>
      choice(
        prec(
          1,
          seq(
            'print',
            $.chevron,
            repeat(seq(',', field('argument', $.expression))),
            optional(','),
          ),
        ),
        prec(
          -3,
          prec.dynamic(
            -1,
            seq(
              'print',
              commaSep1(field('argument', $.expression)),
              optional(','),
            ),
          ),
        ),
      ),

    assert_statement: ($) =>
      seq(optional('comptime'), 'assert', commaSep1($.expression)),

    expression_statement: ($) =>
      choice(
        $.expression,
        $.tuple_expression,
        $.assignment,
        $.augmented_assignment,
        $.yield,
      ),

    named_expression: ($) =>
      seq(
        field('name', $._named_expression_lhs),
        ':=',
        field('value', $.expression),
      ),

    _named_expression_lhs: ($) => choice($.identifier, $.keyword_identifier),

    return_statement: ($) => seq('return', optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => prec.left('pass'),
    function_definition: ($) => seq(
      optional('async'),
      choice('def', 'fn'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field('parameters', $.parameters),
      optional($.unified_clause),
      optional($._function_effects),
      optional($.result_convention),
      optional(
        seq(
          '->',
          optional($._ref_convention),
          field('return_type', $.type),
        ),
      ),
      repeat($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A brace-delimited capture/result convention preceding the return type,
    // e.g. `def f(...) {read} -> T:`. Each convention may bind a name, as in
    // `def f() {read x, mut y}:`.
    _function_effects: ($) => repeat1(choice(
      // A typed `raises` carries an optional error type. The error type is an
      // expression-level type (parametric `Errors[X]`, unioned `A | B`, dotted
      // `mod.Err`) but never a bare `constrained_type`, whose `:` would
      // otherwise swallow the function body colon in `def f() raises HALError:`.
      seq('raises', optional(field('raises_type', alias($._raises_type, $.type)))),
      // `capturing`/`escaping` may carry an origin list, e.g. `capturing[_]`.
      seq(choice('capturing', 'escaping'), optional($.capture_list)),
      'thin',
      // An ABI qualifier, e.g. `abi("C")`.
      $.abi_specifier,
    )),

    parameters: ($) => seq(
      '(',
      optional($._parameters),
      ')',
    ),

    // Retain the legacy unparenthesized form accepted by the upstream grammar
    // without letting tuple/keyword-only parameter patterns compete with
    // current Mojo's parenthesized lambda signature and capture list.
    lambda_parameters: ($) => seq(
      commaSep1(choice(
        $.identifier,
        $.default_parameter,
        $.list_splat_pattern,
        $.dictionary_splat_pattern,
      )),
      optional(','),
    ),

    list_splat: ($) => seq(
      '*',
      $.expression,
    ),

    dictionary_splat: ($) => seq(
      '**',
      $.expression,
    ),

    class_definition: ($) => seq(
      choice('class', 'struct'),
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameter)),
      field(
        'superclasses',
        optional(alias($.superclass_list, $.argument_list)),
      ),
      optional($.where_clause),
      ':',
      field('body', $._suite),
    ),

    // A struct conformance list, like an argument list except each entry may
    // carry `where` constraints, e.g. `Copyable where conforms_to(T, Copyable)`.
    type_parameter: ($) => seq(
      '[',
      optional(seq(
        commaSep1(choice(
          $.infer_separator,
          $.keyword_separator,
          $.positional_separator,
          // Argument-convention soft keywords (`mut`, `out`) used as parameter
          // names or arguments, e.g. `mut: Bool`, `mut=mut`, or a bare `mut`.
          seq(
            alias(choice('mut', 'out'), $.identifier),
            optional(seq(':', field('type', $.type))),
            optional(seq('=', field('default', $._type_parameter_default))),
          ),
          seq(
            $.type,
            optional(seq('=', field('default', $._type_parameter_default))),
            repeat($.where_clause),
          ),
        )),
        optional(','),
      )),
      ']',
    ),

    // A type-parameter default may be any expression (covering parametric
    // instantiations and call chains like `Target[x].options()`), or a bare
    // convention keyword such as `mut` referencing an origin parameter.
    _type_parameter_default: ($) =>
      choice($.expression, alias(choice('mut', 'out'), $.identifier)),

    // The `//` marker separating infer-only parameters from explicit ones.
    argument_list: ($) => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.list_splat,
          $.dictionary_splat,
          alias($.parenthesized_list_splat, $.parenthesized_expression),
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    for_statement: ($) =>
      seq(
        optional('async'),
        'for',
        // The loop variable may carry a convention, e.g. `for var arg in ...`
        // or `for ref item in ...`.
        optional($.argument_convention),
        field('left', $._left_hand_side),
        'in',
        field('right', $._expressions),
        ':',
        field('body', $._suite),
        field('alternative', optional($.else_clause)),
      ),

    with_statement: ($) =>
      seq(
        optional('async'),
        'with',
        $.with_clause,
        ':',
        field('body', $._suite),
      ),

    with_clause: ($) =>
      choice(
        seq(commaSep1($.with_item), optional(',')),
        seq('(', commaSep1($.with_item), optional(','), ')'),
      ),

    with_item: ($) => prec.dynamic(1, seq(field('value', $.expression))),


    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block),
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    expression_list: ($) =>
      prec.right(
        seq(
          $.expression,
          choice(',', seq(repeat1(seq(',', $.expression)), optional(','))),
        ),
      ),

    _parameters: ($) => seq(commaSep1($.parameter), optional(',')),

    _patterns: ($) => seq(commaSep1($.pattern), optional(',')),

    tuple_pattern: ($) => seq('(', optional($._patterns), ')'),

    _ref_convention: ($) =>
      prec(1, seq('ref', '[', commaSep1($.expression), optional(','), ']')),
    typed_parameter: ($) =>
      prec(
        PREC.typed_parameter,
        seq(
          seq(
            optional($.argument_convention),
            choice(
              $.identifier,
              $.list_splat_pattern,
              $.dictionary_splat_pattern,
            ),
          ),
          ':',
          field('type', $.type),
        ),
      ),

    default_parameter: ($) =>
      seq(
        field('name', choice($.identifier, $.tuple_pattern)),
        '=',
        field('value', $.expression),
      ),

    typed_default_parameter: ($) =>
      prec(
        PREC.typed_parameter,
        seq(
          optional($.argument_convention),
          field('name', $.identifier),
          ':',
          field('type', $.type),
          '=',
          field('value', $.expression),
        ),
      ),

    list_splat_pattern: ($) =>
      seq(
        '*',
        choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
      ),

    dictionary_splat_pattern: ($) =>
      seq(
        '**',
        choice($.identifier, $.keyword_identifier, $.subscript, $.attribute),
      ),

    // Extended patterns (patterns allowed in match statement are far more flexible than simple patterns though still a subset of "expression")

    as_pattern: ($) =>
      prec.left(
        seq(
          $.expression,
          'as',
          field('comptime', alias($.expression, $.as_pattern_target)),
        ),
      ),

    // Expressions

    _expression_within_for_in_clause: ($) =>
      choice($.expression, alias($.lambda_within_for_in_clause, $.lambda)),

    not_operator: ($) =>
      prec(PREC.not, seq('not', field('argument', $.expression))),

    boolean_operator: ($) =>
      choice(
        prec.left(
          PREC.and,
          seq(
            field('left', $.expression),
            field('operator', 'and'),
            field('right', $.expression),
          ),
        ),
        prec.left(
          PREC.or,
          seq(
            field('left', $.expression),
            field('operator', 'or'),
            field('right', $.expression),
          ),
        ),
      ),

    binary_operator: ($) => {
      const table = [
        [prec.left, '+', PREC.plus],
        [prec.left, '-', PREC.plus],
        [prec.left, '*', PREC.times],
        [prec.left, '@', PREC.times],
        [prec.left, '/', PREC.times],
        [prec.left, '%', PREC.times],
        [prec.left, '//', PREC.times],
        [prec.right, '**', PREC.power],
        [prec.left, '|', PREC.bitwise_or],
        [prec.left, '&', PREC.bitwise_and],
        [prec.left, '^', PREC.xor],
        [prec.left, '<<', PREC.shift],
        [prec.left, '>>', PREC.shift],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field('left', $.primary_expression),
              // @ts-ignore
              field('operator', operator),
              field('right', $.primary_expression),
            ),
          ),
        ),
      );
    },

    unary_operator: ($) =>
      prec(
        PREC.unary,
        seq(
          field('operator', choice('+', '-', '~')),
          field('argument', $.primary_expression),
        ),
      ),

    _not_in: (_) => seq('not', 'in'),

    _is_not: (_) => seq('is', 'not'),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                'operators',
                choice(
                  '<',
                  '<=',
                  '==',
                  '!=',
                  '>=',
                  '>',
                  '<>',
                  'in',
                  alias($._not_in, 'not in'),
                  'is',
                  alias($._is_not, 'is not'),
                ),
              ),
              $.primary_expression,
            ),
          ),
        ),
      ),

    lambda: ($) => prec(PREC.lambda, seq(
      'lambda',
      field('type_parameters', optional($.type_parameter)),
      field('parameters', optional(choice(
        prec.dynamic(1, $.parameters),
        prec.dynamic(-1, $.lambda_parameters),
      ))),
      optional($._function_effects),
      optional($.result_convention),
      optional(seq(
        '->',
        optional($._ref_convention),
        field('return_type', $.type),
      )),
      ':',
      field('body', $.expression),
    )),

    assignment: ($) =>
      seq(
        field('left', $._left_hand_side),
        choice(
          seq('=', field('right', $._right_hand_side)),
          seq(':', field('type', $.type), optional($.where_clause)),
          seq(
            ':',
            field('type', $.type),
            optional($.where_clause),
            '=',
            field('right', $._right_hand_side),
          ),
        ),
      ),

    augmented_assignment: ($) =>
      seq(
        field('left', $._left_hand_side),
        field(
          'operator',
          choice(
            '+=',
            '-=',
            '*=',
            '/=',
            '@=',
            '//=',
            '%=',
            '**=',
            '>>=',
            '<<=',
            '&=',
            '^=',
            '|=',
          ),
        ),
        field('right', $._right_hand_side),
      ),

    // A backtick-quoted (raw) identifier used as a binding name lexes as a
    // (string), e.g. ``var `6bit` = ...`` or ``comptime `\x1e` = ...``. A call
    // result may also be an assignment target, e.g. `self.get(i) = x` or
    // `node[].right() = other`.
    _left_hand_side: ($) => choice($.pattern, $.pattern_list, $.string, $.call),

    pattern_list: ($) =>
      seq(
        $.pattern,
        choice(',', seq(repeat1(seq(',', $.pattern)), optional(','))),
      ),

    _right_hand_side: ($) =>
      choice(
        $.expression,
        $.expression_list,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
        $.yield,
        // A callable type as the value, e.g. `comptime F = def() -> None`.
        $.function_type,
      ),

    yield: ($) =>
      prec.right(
        seq(
          'yield',
          choice(seq('from', $.expression), optional($._expressions)),
        ),
      ),

    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field('object', $.primary_expression),
          '.',
          choice(
            field('attribute', choice(
              $.identifier,
              'var',
              'comptime',
              'ref',
              'read',
              'mut',
              'out',
              'deinit',
              'unified',
              'where',
            )),
            // A backtick-quoted MLIR member, e.g. the `pop.cast` in
            // ``__mlir_op.`pop.cast` ``.
            field('attribute', $.mlir_fragment),
          ),
        ),
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field('value', $.primary_expression),
          '[',
          // Empty brackets are allowed for parametric instantiation, e.g.
          // `_CString[]`, where every parameter is inferred or defaulted.
          optional(seq(
            commaSep1(field('subscript', choice(
              $.expression,
              $.slice,
              $.keyword_argument,
              // A keyword argument whose value is a slice, e.g. `x[byte=1:n]`.
              alias($.slice_keyword_argument, $.keyword_argument),
              // A callable type argument, e.g. `Variant[def() -> Path]`.
              $.function_type,
              // A bare convention keyword used as a parameter argument, e.g.
              // the `mut` in `unsafe_mut_cast[mut]`.
              alias(choice('mut', 'out'), $.identifier),
            ))),
            optional(','),
          )),
          ']',
        ),
      ),

    slice: ($) =>
      seq(
        optional($.expression),
        ':',
        optional($.expression),
        optional(seq(':', optional($.expression))),
      ),

    ellipsis: (_) => '...',

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field('function', $.primary_expression),
          optional($.parameter_list),
          field('arguments', choice($.generator_expression, $.argument_list)),
        ),
      ),

    type: ($) => choice(
      prec(1, $.expression),
      $.generator_type,
      $.splat_type,
      $.generic_type,
      $.called_type,
      $.union_type,
      $.intersection_type,
      $.constrained_type,
      $.member_type,
      $.function_type,
    ),
    generic_type: ($) => prec.dynamic(1, seq(
      choice(
        $.identifier,
        alias('type', $.identifier),
      ),
      $.type_parameter,
    )),
    list: ($) => seq('[', optional($._collection_elements), ']'),

    tuple: ($) => seq('(', optional($._collection_elements), ')'),

    _not_escape_sequence: (_) => token.immediate('\\'),
